--- a/src/index.scss
+++ b/src/index.scss
@@ -27,9 +27,9 @@ body {
   gap: 1rem;
 }
 
-.rain_btn,
-.winter_btn,
-.summer_btn {
+.rain_card,
+.winter_card,
+.summer_card {
   position: relative;
   width: 160px;
   height: 160px;
@@ -47,30 +47,23 @@ body {
   }
 }
 
-.rain_btn:hover,
-.winter_btn:hover,
-.summer_btn:hover {
+.rain_card:hover,
+.winter_card:hover,
+.summer_card:hover {
   opacity: 0.9;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   cursor: pointer;
 }
 
 .rain_card {
-  width: 80px;
-  height: 80px;
-  background-image: url('./assets/rainy-bg.jpg');
-  background-size: cover;
-}
-
-.rain_btn {
   background-image: url('./assets/rainy-bg.jpg');
 }
 
-.winter_btn {
+.winter_card {
   background-image: url('./assets/winter-bg.jpg');
 }
 
-.summer_btn {
+.summer_card {
   background-image: url('./assets/summer-bg.jpg');
 }
 
